# metriqos-sdk-cpp

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/raylib/: CMakeLists.txt  main.cpp
include/teliqos/: teliqos.h
src/: batcher.cpp  client.cpp  device.cpp  event.cpp  internal.h  retry.cpp  session.cpp  storage.cpp  transport.cpp  uuid.cpp
tests/: CMakeLists.txt  test_event.cpp  test_retry.cpp  test_uuid.cpp
